spirits in scenario 4d have no longer drains special added x and y when creating a ghost of heroine in scenario 4d

--- a/scenarios/04d_The_Heart.cfg
+++ b/scenarios/04d_The_Heart.cfg
@@ -10,7 +10,8 @@
     placement=map_passable
     upkeep=loyal
     ai_special=guardian
-    # they have more hitpoints and stronger attacks than mere ghosts
+    # they have more hitpoints and stronger ranged attack than mere ghosts
+    # but the other hand they do not have drain special for melee attack
     [modifications]
       [object]
         silent=yes
@@ -27,6 +28,14 @@
           name=wail
           increase_damage=2
           increase_attacks=1
+        [/effect]
+      [/object]
+      [object]
+        silent=yes
+        [effect]
+          apply_to=attack
+          name=touch
+          remove_specials=drains
         [/effect]
       [/object]
     [/modifications]
@@ -323,6 +332,7 @@
       type=Ghost
       id=Elrilindë
       name=_"Elrilindë"
+      x,y=$x1,$y1
     [/unit]
     [message]
       speaker=Elrilindë
@@ -372,7 +382,7 @@
   {GUIDES_DEATH}
   {DRUIDS_DEATH}
   {LOYAL_ELVES_DEATH}
-  {FORCE_CHANCE_TO_HIT side=2,3,4,5 id=Elrilindë 20 ()}
+  {FORCE_CHANCE_TO_HIT side=2 id=Elrilindë 20 ()}
 [/scenario]
 
 #unddef SPIRIT
