--- a/scenarios/05_Back_with_Sylph.cfg
+++ b/scenarios/05_Back_with_Sylph.cfg
@@ -128,7 +128,7 @@
         [/message]
         [message]
           speaker=sylph
-          message=_"It isn't wrong to be scared. I expect you never encountered a such creatures. Be careful."
+          message=_"It isn't wrong to be scared. I expect you never encountered such creatures. Be careful."
         [/message]
         {VARIABLE next_scenario 04c_The_Vase}
       [/case]
