correct id of staff in scenario 4d

--- a/scenarios/04d_The_Heart.cfg
+++ b/scenarios/04d_The_Heart.cfg
@@ -148,7 +148,7 @@
     _"Leave it"
     _"$unit.name finds a pretty staff. But only Elrilindë can take it!" (
     [object]
-      id=shield_of_triewin
+      id=staff_of_elvil_gawien
       name= _ "Staff of Elvil-Gawien"
       image=items/staff.png
       description= _ "This staff grants the wearer swift movement!"
