changed filter for death of loyal elves

--- a/utils/deaths.cfg
+++ b/utils/deaths.cfg
@@ -131,12 +131,11 @@
     first_time_only=no
     [filter]
       side=1
-      [not]
-        id=Elrilindë
-      [/not]
-      [not]
-        id=guide
-      [/not]
+      [filter_wml]
+        [variables]
+          to_recall=yes
+        [/variables]
+      [/filter_wml]
     [/filter]
     [message]
       speaker=Elrilindë
