the sylph is stored among scenarios

--- a/scenarios/03_The_Sylph.cfg
+++ b/scenarios/03_The_Sylph.cfg
@@ -230,6 +230,13 @@
       speaker=Elrilindë
       message=_"As you say."
     [/message]
+    [store_unit]
+      [filter]
+        id=sylph
+      [/filter]
+      variable=sylph_store
+      kill=no
+    [/store_unit]
     {VARIABLE items_collected 0}
     [endlevel]
       result=victory
