--- a/scenarios/05_Back_with_Sylph.cfg
+++ b/scenarios/05_Back_with_Sylph.cfg
@@ -68,6 +68,10 @@
     name=prestart
     # we use map from scenario 3 but the player will start at different location now
     {TELEPORT_UNIT id=Elrilindë 15 14}
+    [unstore_unit]
+	    variable=sylph_store
+	    find_vacant=no
+	  [/unstore_unit]
   [/event]
   
   [event]
