changed next scenario and music in scenario 6

--- a/scenarios/06_The_Ritual.cfg
+++ b/scenarios/06_The_Ritual.cfg
@@ -15,11 +15,11 @@
 [scenario]
 	id=06_The_Ritual
 	name=_"The Ritual"
-	next_scenario=07_Xxx
+	next_scenario=07_The_Memories
 	map_data="{~add-ons/The_Memories/maps/03_The_Sylph.map}"
 	snapshot=no
   turns=15
-  {SCENARIO_MUSIC elvish-theme.ogg} # change music
+  {SCENARIO_MUSIC elvish-theme.ogg}
 	{DEFAULT_SCHEDULE}
   
   [side]
@@ -207,6 +207,9 @@
       speaker=enemy
       message=_"Well I didn't want to kill you but I don't mind it."
     [/message]
+    {REPLACE_SCENARIO_MUSIC battle.ogg}
+    {APPEND_MUSIC wanderer.ogg}
+    {APPEND_MUSIC breaking_the_chains.ogg}
   [/event]
   
   [event]
