added time over dialogue in scenario 6 improved time over dialogue in scenario 4d

--- a/scenarios/04d_The_Heart.cfg
+++ b/scenarios/04d_The_Heart.cfg
@@ -345,7 +345,7 @@
     name=time over
     [message]
       speaker=Elrilindë
-      message=_"We lost too much time."
+      message=_"I lost too much time. More spirits are appearing. I have no chance against them now."
     [/message]
   [/event]
   
