--- a/scenarios/06_The_Ritual.cfg
+++ b/scenarios/06_The_Ritual.cfg
@@ -310,6 +310,41 @@
     [/endlevel]
   [/event]
   
+  [event]
+    name=time over
+    [unstore_unit]
+	    variable=sylph_store
+	    x,y=15,9
+	  [/unstore_unit]
+    [message]
+      speaker=sylph
+      message=_"I thought I felt some intruders. Prepare to die!"
+    [/message]
+    [harm_unit]
+      [filter]
+        id=enemy
+      [/filter]
+      [secondary_unit]
+        id=sylph
+      [/secondary_unit]
+      [primary_attack]
+        name=faerie fire
+      [/primary_attack]
+      [secondary_attack]
+        name=crossbow
+      [/secondary_attack]
+      amount=55
+      damage_type=arcane
+      animate=no
+      kill=yes
+      experience=no
+    [/harm_unit]
+    [message]
+      speaker=sylph
+      message=_"Damn! I lost my concentration. I can't finish the ritual."
+    [/message]
+  [/event]
+  
   {GENERIC_DEATHS1}
   {ELUSIVE_HERO}
 [/scenario]
