corrected name of an event in scenarios/06_The_Ritual.cfg

--- a/scenarios/06_The_Ritual.cfg
+++ b/scenarios/06_The_Ritual.cfg
@@ -252,7 +252,7 @@
   [/event]
   
   [event]
-    name=sylph_return
+    name=sylph_returns
     [unstore_unit]
 	    variable=sylph_store
 	    x,y=15,9
