scenario 4d - only the guide is recalled - changed defeat conditions (only death of heroine cause defeat) - the heart is shown

--- a/scenarios/04d_The_Heart.cfg
+++ b/scenarios/04d_The_Heart.cfg
@@ -111,7 +111,10 @@
 				description= _ "Banish spirits of the forest"
 				condition=win
 			[/objective]
-			{HOW_TO_LOSE}
+			[objective]
+		    description= _ "Death of Elrilindë"
+		    condition=lose
+	    [/objective]
       [note]
         description = _ "Only the heroine can hit the spirits and only with ranged attack."
       [/note]
@@ -172,9 +175,11 @@
   
   [event]
     name=start
-    # recall the guide and loyal elves
-    {RECALL_HEROES}
-    # starting dialog
+    # recall the guide
+    [recall]
+      id=guide
+    [/recall]
+    # starting dialogue
     [message]
       speaker=Elrilindë
       message=_"We are finally here. I am sick when I think of what I have to do."
@@ -276,6 +281,20 @@
       message=_"It was the last one. Ok now the bark."
     [/message]
     {MOVE_UNIT id=Elrilindë 14 13}
+    [store_unit]
+      [filter]
+        id=heart
+      [/filter]
+      variable=heart_store
+      kill=yes
+    [/store_unit]
+    {VARIABLE heart_store.status.uncovered yes}
+    [unstore_unit]
+      variable=heart_store
+    [/unstore_unit]
+    {CLEAR_VARIABLE heart_store}
+    [redraw]
+    [/redraw]
     {REPEAT 3 (
       [harm_unit]
         [filter]
