replaced variable l with i in scenario 4d (it caused some lagging and it always should be in this way)

--- a/scenarios/04d_The_Heart.cfg
+++ b/scenarios/04d_The_Heart.cfg
@@ -137,7 +137,7 @@
 		    {VARIABLE temp_store.attack[$i].attack_weight "0"}
 	    [/then]
     [/if]
-    {NEXT l}
+    {NEXT i}
     [unstore_unit]
 	    variable=temp_store
       find_vacant=no
@@ -388,7 +388,7 @@
 				{CLEAR_VARIABLE temp_store.attack[$i].attack_weight}
 		  [/then]
 	  [/if]
-	  {NEXT l}
+	  {NEXT i}
     [unstore_unit]
 	    variable=temp_store
       find_vacant=no
