improved writing in scenario 3,4a,4c and 5 deleted (now) senseless code in scenario 4d (we no longer recall other units than the guide) changed issue tracker

--- a/scenarios/03_The_Sylph.cfg
+++ b/scenarios/03_The_Sylph.cfg
@@ -148,7 +148,7 @@
     [/message]
     [message]
       speaker=sylph
-      message=_"Elves? I didn't see my kind for a long time. Who are you?"
+      message=_"Elves? I haven't had any visitors for a long time. Who are you?"
     [/message]
     [message]
       speaker=Elrilindë
@@ -208,7 +208,7 @@
     [/message]
     [message]
       speaker=Elrilindë
-      message=_"I lost all my memories. I didn't know who am I."
+      message=_"I lost all my memories. I did not know who am I."
     [/message]
     [message]
       speaker=sylph
