--- a/scenarios/04a_The_Leaf.cfg
+++ b/scenarios/04a_The_Leaf.cfg
@@ -103,7 +103,7 @@
     [/message]
     [message]
       speaker=guide
-      message=_"I am sorry, milady. I never visited this part of the forest. Only thing I know is that this is the north edge of the forest. Farther to the north are lands of the men."
+      message=_"I am sorry, milady. I never visited this part of the forest. Only thing I know is that this is the north edge of the forest. Farther to the north are lands of the man."
     [/message]
     [message]
       speaker=Elrilindë
