--- a/scenarios/04c_The_Vase.cfg
+++ b/scenarios/04c_The_Vase.cfg
@@ -428,7 +428,7 @@
     [/message]
     [message]
       speaker=druid
-      message=_"Yes. I am glad."
+      message=_"Yes, everything is all right."
     [/message]
     {VARIABLE druid_freed yes}
     [if]
