--- a/scenarios/04d_The_Heart.cfg
+++ b/scenarios/04d_The_Heart.cfg
@@ -397,10 +397,8 @@
     {VARIABLE_OP items_collected add 1}
   [/event]
   
-  {FORCE_CHANCE_TO_HIT (id=guide,druid,elf1,elf2,elf3) side=2 0 ()} # they cannot banish spirits and are not allowed to damage the heart
+  {FORCE_CHANCE_TO_HIT (id=guide) side=2 0 ()} # she cannot banish spirits and is not allowed to damage the heart
   {GUIDES_DEATH}
-  {DRUIDS_DEATH}
-  {LOYAL_ELVES_DEATH}
   {FORCE_CHANCE_TO_HIT side=2 id=Elrilindë 20 ()}
 [/scenario]
 
