--- a/scenarios/05_Back_with_Sylph.cfg
+++ b/scenarios/05_Back_with_Sylph.cfg
@@ -91,7 +91,7 @@
         {MOVE_UNIT id=Elrilindë 15 11}
         [message]
           speaker=Elrilindë
-          message=_"Yes. Here you are. What is the next item?"
+          message=_"Yes, here you are. What is the next item?"
         [/message]
         [message]
           speaker=sylph
@@ -145,7 +145,7 @@
         {MOVE_UNIT id=Elrilindë 15 11}
         [message]
           speaker=Elrilindë
-          message=_"Yes here you are. We also killed those creatures."
+          message=_"Yes, here you are. We also killed those creatures."
         [/message]
         [message]
           speaker=sylph
