changed Elrilindë to Elrilinde in heroine's id a unit types names (it was probably the cause of broken save files) first scenario - added some delay after scrolling to humans' leader - stopped the attack after the player defeated the enemy third scenario - added primary unit for event completed - the sylph is healed at the end of the scenario the guide is petrified in scenario 4d now a sylph's servant should really appear next to her now corrected paths to images in units/Enchantress.cfg (only in svn)

--- a/scenarios/01_The_Begining.cfg
+++ b/scenarios/01_The_Begining.cfg
@@ -17,8 +17,8 @@
     user_team_name= _ "Elves"
     shroud=yes
 
-		type=Elrilindë Elvish Sorceress # only sprite is different, i like the older one more
-		id=Elrilindë
+		type=Elrilinde Elvish Sorceress # only sprite is different, i like the older one more
+		id=Elrilinde
 		name=_"Elrilindë"
 		canrecruit=yes
 		unrenamable=true
@@ -67,7 +67,7 @@
       x,y=16,7
     [/village]
 	[/side]
-  {LIMIT_CONTEMPORANEOUS_RECRUITS 2 (Elvish Shaman) 4} # elves need only a few healers
+  {LIMIT_CONTEMPORANEOUS_RECRUITS 2 (Elvish Shaman) 3} # elves need only a few healers
   
   [side]
     side=3
@@ -119,7 +119,7 @@
 			message=_"Humans from a near city are attacking us, milady."
 		[/message]
     [message]
-			speaker=Elrilindë
+			speaker=Elrilinde
 			message=_"Who are you? And who am I?"
 		[/message]
     [message]
@@ -127,7 +127,7 @@
 			message=_"Did you forget? You are Elrilindë, defender of this forest and our leader."
 		[/message]
     [message]
-			speaker=Elrilindë
+			speaker=Elrilinde
 			message=_"I cannot remember anything. But for an uknown reason I trust you. Tell me, who are you?"
 		[/message]
     [message]
@@ -139,7 +139,7 @@
 			message=_"Alas there is no time to talk. Humans are attacking us. We must defeat their leader and find out why are they doing it."
 		[/message]
     [message]
-			speaker=Elrilindë
+			speaker=Elrilinde
 			message=_"I would like to help you but I know nothing about my abilities."
 		[/message]
     [message]
@@ -161,7 +161,7 @@
       [/filter_location]
     [/filter]
     [message]
-			speaker=Elrilindë
+			speaker=Elrilinde
 			message=_"It is really beautiful here. I could stay here forever. But wait ..."
 		[/message]
     {REPLACE_SCENARIO_MUSIC battle.ogg}
@@ -180,8 +180,11 @@
 	  [scroll_to_unit]
 	    id=Raoron
 	  [/scroll_to_unit]
+    [delay]
+      time=500
+    [/delay]
     [message]
-			speaker=Elrilindë
+			speaker=Elrilinde
 			message=_"I can see these humans."
 		[/message]
   [/event]
@@ -203,7 +206,19 @@
     [/modify_side]
     {FULL_HEAL id=Raoron}
     {REPLACE_SCENARIO_MUSIC revelation.ogg}
-    # i need make the game to stop the attack but i have no idea how to do it
+    # stop the attack
+    [animate_unit]
+      flag=standing
+      [filter]
+        x,y=$x1,$y1
+      [/filter]
+    [/animate_unit]
+    [animate_unit]
+      flag=standing
+      [filter]
+        x,y=$x2,$y2
+      [/filter]
+    [/animate_unit]
     [message]
 			speaker=Tendriel
 			message=_"We lived in peace for centuries, traded, helped each other. Why did you break it, humans?"
@@ -237,7 +252,7 @@
 			message=_"Do you have amnesia, elvish lady?"
 		[/message]
     [message]
-			speaker=Elrilindë
+			speaker=Elrilinde
 			message=_"Yes and I do not know how to regain my memories."
 		[/message]
     [message]
@@ -257,7 +272,7 @@
 			message=_"Maybe it is but it is the only chance for our lady."
 		[/message]
     [message]
-			speaker=Elrilindë
+			speaker=Elrilinde
 			message=_"Where does she live, Tendriel?"
 		[/message]
     [message]
@@ -307,7 +322,7 @@
 	    side=3
 	  [/filter]
 	  [filter_second]
-	    id=Elrilindë
+	    id=Elrilinde
 	  [/filter_second]
     # after first kill hero has a speech
 	  [message]
@@ -320,7 +335,7 @@
 		[/message]
     # scroll back to her
     [scroll_to_unit]
-	    id=Elrilindë
+	    id=Elrilinde
 	  [/scroll_to_unit]
 	[/event]
   
