--- a/scenarios/03_The_Sylph.cfg
+++ b/scenarios/03_The_Sylph.cfg
@@ -30,8 +30,8 @@
     user_team_name= _ "Elves"
     shroud=yes # will be removed in start event
 
-		type=Elrilindë Elvish Sorceress
-		id=Elrilindë
+		type=Elrilinde Elvish Sorceress
+		id=Elrilinde
 		name=_"Elrilindë"
 		canrecruit=yes
     
@@ -139,7 +139,7 @@
     {RECALL_HEROES}
     # starting dialogue
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"I can see the Sylph."
     [/message]
     [message]
@@ -151,7 +151,7 @@
       message=_"Elves? I haven't had any visitors for a long time. Who are you?"
     [/message]
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"I am Elrilindë and need your help. You may be the only one who can help me."
     [/message]
     [message]
@@ -159,7 +159,7 @@
       message=_"I am sorry but I have my own troubles. These fools want to defile this forest. If you help me with them then I can help you."
     [/message]
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"Well."
     [/message]
     [modify_side]
@@ -190,6 +190,9 @@
         # if yes player won
 	      [fire_event]
 	        name=completed
+          [primary_unit]
+            x,y=$x2,$y2
+          [/primary_unit]
 	      [/fire_event]
 	    [/else]
 	  [/if]
@@ -207,7 +210,7 @@
       message=_"Thank you. Now tell me what can I help you with."
     [/message]
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"I lost all my memories. I did not know who am I."
     [/message]
     [message]
@@ -215,7 +218,7 @@
       message=_"Only a very powerfull magician can do a such thing. And only someone stronger can break it."
     [/message]
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"Can you break it?"
     [/message]
     [message]
@@ -227,9 +230,10 @@
       message=_"The first of them is a leaf of a plant named ... Well it doesn't matter. Just go to the north. Follow the path and collect one leaf. Then return to me."
     [/message]
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"As you say."
     [/message]
+    {FULL_HEAL id=sylph}
     [store_unit]
       [filter]
         id=sylph
