--- a/scenarios/04b_The_Fruit.cfg
+++ b/scenarios/04b_The_Fruit.cfg
@@ -19,8 +19,8 @@
     user_team_name= _ "Elves"
     shroud=yes
 
-		type=Elrilindë Elvish Sorceress
-		id=Elrilindë
+		type=Elrilinde Elvish Sorceress
+		id=Elrilinde
 		name=_"Elrilindë"
 		canrecruit=yes
     
@@ -96,7 +96,7 @@
     {WILD_WOLF 6 8}
     # starting dialog
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"It seems that this forest is very wide. I cannot see next edge of it."
     [/message]
     [message]
@@ -104,7 +104,7 @@
       message=_"Yes, our forest is very wide, milady but we do not inhabit all its parts. Some of them are very terrifying."
     [/message]
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"Is it the case of this part?"
     [/message]
     [message]
@@ -112,7 +112,7 @@
       message=_"Not at all. You do not need to fear, milady. (whispers) But I hope that the Sylph will not send us to the south."
     [/message]
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"What did you whisper, Gioniel?"
     [/message]
     [message]
@@ -120,7 +120,7 @@
       message=_"Only that I hope that we will find the plant very soon."
     [/message]
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"Yes, you are right. We should hurry."
     [/message]
   [/event]
@@ -174,7 +174,7 @@
       message=_"I have found the plant."
     [/message]
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"Very well. Let us take the fruit and go back to the Sylph."
     [/message]
     {VARIABLE_OP items_collected add 1}
@@ -189,7 +189,7 @@
   [event]
     name=time over
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"We lost too much time."
     [/message]
   [/event]
