--- a/scenarios/04d_The_Heart.cfg
+++ b/scenarios/04d_The_Heart.cfg
@@ -63,8 +63,8 @@
     user_team_name= _ "Elves"
     shroud=no
 
-		type=Elrilindë Elvish Sorceress
-		id=Elrilindë
+		type=Elrilinde Elvish Sorceress
+		id=Elrilinde
 		name=_"Elrilindë"
 		canrecruit=yes
     
@@ -96,7 +96,7 @@
       [goal]
         name=target
         [criteria]
-          id=Elrilindë # they do not care about anyone else
+          id=Elrilinde # they do not care about anyone else
         [/criteria]
         value=50
       [/goal]
@@ -112,7 +112,7 @@
 				condition=win
 			[/objective]
 			[objective]
-		    description= _ "Death of Elrilindë"
+		    description= _ "Death of Elrilinde"
 		    condition=lose
 	    [/objective]
       [note]
@@ -122,7 +122,7 @@
     # disable heroine's melee attack for this scenario
     [store_unit]
       [filter]
-	      id=Elrilindë
+	      id=Elrilinde
       [/filter]
 	    variable=temp_store
 	    kill=no
@@ -145,7 +145,7 @@
     {CLEAR_VARIABLE temp_store,i}
   [/event]
   
-  {PICKUPPABLE_ITEM staff_of_elvil_gawien 15 17 id=Elrilindë items/staff.png
+  {PICKUPPABLE_ITEM staff_of_elvil_gawien 15 17 id=Elrilinde items/staff.png
     _"$unit.name finds a pretty staff. Should she pick it up?"
     _"Take it"
     _"Leave it"
@@ -181,7 +181,7 @@
     [/recall]
     # starting dialogue
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"We are finally here. I am sick when I think of what I have to do."
     [/message]
     [message]
@@ -189,7 +189,7 @@
       message=_"I understand you, milady. It is not very good alas we cannot help you this time. The spirits can be banished only by magic."
     [/message]
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"I know. Anyhow thank you for accompanying me here and support."
     [/message]
     [message]
@@ -197,10 +197,10 @@
       message=_"You are welcome."
     [/message]
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"But I have to continue at my own now. Wait for me here."
     [/message]
-    {MOVE_UNIT id=Elrilindë 17 17}
+    {MOVE_UNIT id=Elrilinde 17 17}
     {SPIRIT 11 16 spirit1}
     {SPIRIT 12 14 spirit2}
     {SPIRIT 15 14 spirit3}
@@ -211,7 +211,7 @@
       message=_"Why are you on this sacred place?"
     [/message]
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"I lost all my memories and I need the bark of the Heart to recover them."
     [/message]
     [message]
@@ -231,13 +231,16 @@
       message=_"Leave this place and never return!"
     [/message]
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"What? I have no idea what am I like. I cannot leave."
     [/message]
     [message]
       speaker=spirit5
       message=_"As you wish. You will never leave this place."
     [/message]
+    [petrify]
+      id=guide
+    [/petrify]
   [/event]
   
   [event]
@@ -277,10 +280,10 @@
       id=heart
     [/unpetrify]
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"It was the last one. Ok now the bark."
     [/message]
-    {MOVE_UNIT id=Elrilindë 14 13}
+    {MOVE_UNIT id=Elrilinde 14 13}
     [store_unit]
       [filter]
         id=heart
@@ -301,7 +304,7 @@
           id=heart
         [/filter]
         [filter_second]
-          id=Elrilindë
+          id=Elrilinde
         [/filter_second]
         amount=5
         damage_type=impact
@@ -316,12 +319,12 @@
       [/harm_unit]
     )}
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"(whispers) I am sorry about it."
     [/message]
-    {MOVE_UNIT id=Elrilindë 23 22}
+    {MOVE_UNIT id=Elrilinde 23 22}
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"Let us go back to Sylph."
     [/message]
     [endlevel]
@@ -335,26 +338,26 @@
   [event]
     name=last breath
     [filter]
-      id=Elrilindë
+      id=Elrilinde
     [/filter]
     [message]
       speaker=second_unit
       message=_"Join us!"
     [/message]
     [kill]
-      id=Elrilindë
+      id=Elrilinde
       fire_event=no
       animate=yes
     [/kill]
     [unit]
       side=2
       type=Ghost
-      id=Elrilindë
-      name=_"Elrilindë"
+      id=Elrilinde
+      name=_"Elrilinde"
       x,y=$x1,$y1
     [/unit]
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"No!"
     [/message]
     {DEFEAT}
@@ -363,7 +366,7 @@
   [event]
     name=time over
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"I lost too much time. More spirits are appearing. I have no chance against them now."
     [/message]
   [/event]
@@ -373,7 +376,7 @@
     # enable heroine's melee attack again
     [store_unit]
       [filter]
-	      id=Elrilindë
+	      id=Elrilinde
       [/filter]
 	    variable=temp_store
 	    kill=no
@@ -395,11 +398,13 @@
     [/unstore_unit]
     {CLEAR_VARIABLE temp_store,i}
     {VARIABLE_OP items_collected add 1}
+    [unpetrify]
+      id=guide
+    [/unpetrify]
   [/event]
   
   {FORCE_CHANCE_TO_HIT (id=guide) side=2 0 ()} # she cannot banish spirits and is not allowed to damage the heart
   {GUIDES_DEATH}
-  {FORCE_CHANCE_TO_HIT side=2 id=Elrilindë 20 ()}
 [/scenario]
 
 #unddef SPIRIT
