--- a/scenarios/05_Back_with_Sylph.cfg
+++ b/scenarios/05_Back_with_Sylph.cfg
@@ -17,8 +17,8 @@
 		team_name=elves
     user_team_name= _ "Elves"
 
-		type=Elrilindë Elvish Sorceress
-		id=Elrilindë
+		type=Elrilinde Elvish Sorceress
+		id=Elrilinde
 		name=_"Elrilindë"
 		canrecruit=yes
     
@@ -67,7 +67,7 @@
   [event]
     name=prestart
     # we use map from scenario 3 but the player will start at different location now
-    {TELEPORT_UNIT id=Elrilindë 15 14}
+    {TELEPORT_UNIT id=Elrilinde 15 14}
     [unstore_unit]
 	    variable=sylph_store
 	    find_vacant=no
@@ -88,9 +88,9 @@
           speaker=sylph
           message=_"You returned. Do you have the leaf with you?"
         [/message]
-        {MOVE_UNIT id=Elrilindë 15 11}
+        {MOVE_UNIT id=Elrilinde 15 11}
         [message]
-          speaker=Elrilindë
+          speaker=Elrilinde
           message=_"Yes, here you are. What is the next item?"
         [/message]
         [message]
@@ -101,9 +101,9 @@
       [/case]
       [case]
         value=2
-        {MOVE_UNIT id=Elrilindë 15 11}
+        {MOVE_UNIT id=Elrilinde 15 11}
         [message]
-          speaker=Elrilindë
+          speaker=Elrilinde
           message=_"Here you are the fruit."
         [/message]
         [message]
@@ -111,7 +111,7 @@
           message=_"Very well but now comes the harder part. You have to go to the south and bring me a vase."
         [/message]
         [message]
-          speaker=Elrilindë
+          speaker=Elrilinde
           message=_"A vase? Why do you need it and why is it hard?"
         [/message]
         [message]
@@ -142,9 +142,9 @@
           speaker=sylph
           message=_"Did you obtain the vase?"
         [/message]
-        {MOVE_UNIT id=Elrilindë 15 11}
+        {MOVE_UNIT id=Elrilinde 15 11}
         [message]
-          speaker=Elrilindë
+          speaker=Elrilinde
           message=_"Yes, here you are. We also killed those creatures."
         [/message]
         [message]
@@ -152,7 +152,7 @@
           message=_"You did a great job. I am really proud of you. They occupied that part of our forest for a very long time. It's very good it's finally clear."
         [/message]
         [message]
-          speaker=Elrilindë
+          speaker=Elrilinde
           message=_"Thank you. What is the next item?"
         [/message]
         [message]
@@ -160,7 +160,7 @@
           message=_"To obtain the last item you have to visit the heart of this forest."
         [/message]
         [message]
-          speaker=Elrilindë
+          speaker=Elrilinde
           message=_"I thought that this place is the heart of this forest. At least everyone says it."
         [/message]
         [message]
@@ -176,7 +176,7 @@
           message=_"As you think but it ruins her chances to recover her memories."
         [/message]
         [message]
-          speaker=Elrilindë
+          speaker=Elrilinde
           message=_"What is the last item and what dwells in that part of the forest?"
         [/message]
         [message]
@@ -184,7 +184,7 @@
           message=_"There is a tree. It is older than all trees in this forest. This is the heart of this forest itself. And you have to get its bark."
         [/message]
         [message]
-          speaker=Elrilindë
+          speaker=Elrilinde
           message=_"What?! Do you want me to damage it?"
         [/message]
         [message]
@@ -192,7 +192,7 @@
           message=_"Its bark is necessary in order to recover your memories. It can't be avoided."
         [/message]
         [message]
-          speaker=Elrilindë
+          speaker=Elrilinde
           message=_"(sighs) Very well but why do I think that it will not be easy?"
         [/message]
         [message]
@@ -200,7 +200,7 @@
           message=_"I expect the spirits of this forest won't be willing to let you do it. You will have to banish them."
         [/message]
         [message]
-          speaker=Elrilindë
+          speaker=Elrilinde
           message=_"It is even better now."
         [/message]
         [message]
@@ -208,7 +208,7 @@
           message=_"I am sorry about it but as far as I know there is no other way. But if you don't like it ..."
         [/message]
         [message]
-          speaker=Elrilindë
+          speaker=Elrilinde
           message=_"I will do it. Let us go."
         [/message]
         {VARIABLE next_scenario 04d_The_Heart}
