--- a/scenarios/06_The_Ritual.cfg
+++ b/scenarios/06_The_Ritual.cfg
@@ -28,8 +28,8 @@
 		team_name=elves
     user_team_name= _ "Elves"
 
-		type=Elrilindë Elvish Sorceress
-		id=Elrilindë
+		type=Elrilinde Elvish Sorceress
+		id=Elrilinde
 		name=_"Elrilindë"
 		canrecruit=yes
     
@@ -90,7 +90,7 @@
   [event]
     name=prestart
     # we use map from scenario 3 but the player will start at different location now
-    {TELEPORT_UNIT id=Elrilindë 15 14}
+    {TELEPORT_UNIT id=Elrilinde 15 14}
     [unstore_unit]
 	    variable=sylph_store
 	    find_vacant=no
@@ -114,9 +114,9 @@
       speaker=sylph
       message=_"You returned. Do you have the bark of the Heart with you?"
     [/message]
-    {MOVE_UNIT id=Elrilindë 15 11}
+    {MOVE_UNIT id=Elrilinde 15 11}
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"Yes."
     [/message]
     [message]
@@ -124,7 +124,7 @@
       message=_"You are somehow quiet. What is wrong with you?"
     [/message]
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"I have done a bad thing, you know."
     [/message]
     [message]
@@ -132,7 +132,7 @@
       message=_"In a few hours you will regain your memories and everything will be ok."
     [/message]
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"Ok."
     [/message]
     [message]
@@ -168,7 +168,7 @@
     {ENEMY Bowman 16 22}
     {ENEMY Longbowman 17 23}
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"What do you want here, humans?"
     [/message]
     [message]
@@ -176,7 +176,7 @@
       message=_"I am looking for a sylph. She could live here."
     [/message]
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"Yes, she lives here but why do you need to see her?"
     [/message]
     [message]
@@ -184,7 +184,7 @@
       message=_"She killed my brother a few days ago. I will make her pay for it!"
     [/message]
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"He wanted to defile this forest. He had to die."
     [/message]
     [message]
@@ -200,7 +200,7 @@
       message=_"I only want to get to a sylph. I am not interested in you others."
     [/message]
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"You are the same like your brother were. We will not let you go to her. She cannot be distracted."
     [/message]
     [message]
@@ -262,7 +262,7 @@
       message=_"What did happen here? I heard some noise."
     [/message]
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"Well a brother of a deffiler wanted to take revenge on you. We stopped him."
     [/message]
     [message]
@@ -272,8 +272,8 @@
     [unit]
       type=Elvish Shaman
       side=3
-      placement=leader
       id=servant
+      x,y=15,9
       generate_name=yes
       random_traits=no
       upkeep=loyal
@@ -284,7 +284,7 @@
       message=_"I am really sorry about it, mistress."
     [/message]
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"So I have to collect all items again, right?"
     [/message]
     [message]
