--- a/units/Enchantress.cfg
+++ b/units/Enchantress.cfg
@@ -1,11 +1,11 @@
 #textdomain wesnoth-The_Memories
 
 [unit_type]
-  id=Elrilindë Elvish Enchantress
+  id=Elrilinde Elvish Enchantress
   name={S_ELVISH_ENCHANTRESS}
   race=elf
   gender=female
-  image="oldelvish-enchantress.png"
+  image="units/oldelvish-enchantress.png"
   profile="portraits/elves/sorceress.png"
   {MAGENTA_IS_THE_TEAM_COLOR}
   hitpoints=50
@@ -67,20 +67,19 @@
     [/specials]
     icon=attacks/faerie-fire.png
   [/attack]
-  {DEFENSE_ANIM_RANGE "oldelvish-enchantress-ranged-defend.png" "oldelvish-enchantress-defend.png" {SOUND_LIST:ELF_FEMALE_HIT} melee }
-  {DEFENSE_ANIM_ELVEN_RANGE "oldelvish-enchantress-ranged-defend.png" "oldelvish-enchantress-defend.png" {SOUND_LIST:ELF_FEMALE_HIT} ranged }
+  {DEFENSE_ANIM_RANGE "units/oldelvish-enchantress-ranged-defend.png" "units/oldelvish-enchantress-defend.png" {SOUND_LIST:ELF_FEMALE_HIT} melee }
+  {DEFENSE_ANIM_ELVEN_RANGE "units/oldelvish-enchantress-ranged-defend.png" "units/oldelvish-enchantress-defend.png" {SOUND_LIST:ELF_FEMALE_HIT} ranged }
   [attack_anim]
     [filter_attack]
       name=faerie fire
     [/filter_attack]
     start_time=-450
     {MISSILE_FRAME_FAERIE_FIRE}
-
     [if]
       hits=yes
       [frame]
         duration=75
-        image="oldelvish-enchantress-attack1.png"
+        image="units/oldelvish-enchantress-attack1.png"
         sound=magic-faeriefire.ogg
 
         halo=halo/elven/faerie-fire-halo1.png
@@ -91,47 +90,46 @@
       hits=no
       [frame]
         duration=75
-        image="oldelvish-enchantress-attack2.png"
+        image="units/oldelvish-enchantress-attack2.png"
         sound=magic-faeriefire-miss.ogg
 
         halo=halo/elven/faerie-fire-halo1.png
         halo_x,halo_y=0,-28
       [/frame]
     [/else]
-
     [frame]
       duration=75
-      image="oldelvish-enchantress-attack3.png"
+      image="units/oldelvish-enchantress-attack3.png"
       halo=halo/elven/faerie-fire-halo2.png
       halo_x,halo_y=0,-28
     [/frame]
     [frame]
       duration=75
-      image="oldelvish-enchantress-aatack4.png"
+      image="units/oldelvish-enchantress-attack4.png"
       halo=halo/elven/faerie-fire-halo3.png
       halo_x,halo_y=0,-28
     [/frame]
     [frame]
       duration=75
-      image="oldelvish-enchantress-attack5.png"
+      image="units/oldelvish-enchantress-attack5.png"
       halo=halo/elven/faerie-fire-halo4.png
       halo_x,halo_y=0,-28
     [/frame]
     [frame]
       duration=75
-      image="oldelvish-enchantress-attack6.png"
+      image="units/oldelvish-enchantress-attack6.png"
       halo=halo/elven/faerie-fire-halo5.png
       halo_x,halo_y=0,-28
     [/frame]
     [frame]
       duration=75
-      image="oldelvish-enchantress-attack7.png"
+      image="units/oldelvish-enchantress-attack7.png"
       halo=halo/elven/faerie-fire-halo6.png
       halo_x,halo_y=0,-28
     [/frame]
     [frame]
       duration=75
-      image="oldelvish-enchantress-attack1.png"
+      image="units/oldelvish-enchantress-attack1.png"
       halo=halo/elven/faerie-fire-halo7.png
       halo_x,halo_y=0,-28
     [/frame]
@@ -150,51 +148,51 @@
     [/missile_frame]
     [frame]
       duration=75
-      image="oldelvish-enchantress-entangle1.png"
+      image="units/oldelvish-enchantress-entangle1.png"
       halo=halo/elven/nature-halo1.png
       halo_x,halo_y=0,-28
     [/frame]
     [frame]
       duration=75
-      image="oldelvish-enchantress-entangle2.png"
+      image="units/oldelvish-enchantress-entangle2.png"
       halo=halo/elven/nature-halo2.png
       halo_x,halo_y=0,-28
     [/frame]
     [frame]
       duration=75
-      image="oldelvish-enchantress-entangle3.png"
+      image="units/oldelvish-enchantress-entangle3.png"
       halo=halo/elven/nature-halo3.png
       halo_x,halo_y=0,-28
     [/frame]
     [frame]
       duration=75
-      image="oldelvish-enchantress-entangle4.png"
+      image="units/oldelvish-enchantress-entangle4.png"
       halo=halo/elven/nature-halo4.png
       halo_x,halo_y=0,-28
     [/frame]
     [frame]
       duration=75
-      image="oldelvish-enchantress-entangle5.png"
+      image="units/oldelvish-enchantress-entangle5.png"
       halo=halo/elven/nature-halo5.png
       halo_x,halo_y=0,-28
     [/frame]
     {SOUND:SLOW}
     [frame]
       duration=75
-      image="oldelvish-enchantress-entangle6.png"
+      image="units/oldelvish-enchantress-entangle6.png"
       halo=halo/elven/nature-halo6.png
       sound=entangle.wav
       halo_x,halo_y=0,-28
     [/frame]
     [frame]
       duration=75
-      image="oldelvish-enchantress-entangle7.png"
+      image="units/oldelvish-enchantress-entangle7.png"
       halo=halo/elven/nature-halo7.png
       halo_x,halo_y=0,-28
     [/frame]
     [frame]
       duration=75
-      image="oldelvish-enchantress-entangle1.png"
+      image="units/oldelvish-enchantress-entangle1.png"
       halo=halo/elven/nature-halo8.png
       halo_x,halo_y=0,-28
     [/frame]
@@ -207,17 +205,17 @@
     start_time=-250
     [frame]
       duration=90
-      image="oldelvish-enchantress-melee1.png"
+      image="units/oldelvish-enchantress-melee1.png"
     [/frame]
     [frame]
       duration=90
-      image="oldelvish-enchantress-melee2.png"
+      image="units/oldelvish-enchantress-melee2.png"
     [/frame]
     [if]
       hits=yes
       [frame]
         duration=100
-        image="oldelvish-enchantress-melee3.png"
+        image="units/oldelvish-enchantress-melee3.png"
         sound=staff.wav
       [/frame]
     [/if]
@@ -225,17 +223,17 @@
       hits=no
       [frame]
         duration=100
-        image="oldelvish-enchantress-melee3.png"
+        image="units/oldelvish-enchantress-melee3.png"
         sound={SOUND_LIST:MISS}
       [/frame]
     [/else]
     [frame]
       duration=100
-      image="oldelvish-enchantress-melee4.png"
+      image="units/oldelvish-enchantress-melee4.png"
     [/frame]
     [frame]
       duration=100
-      image="oldelvish-enchantress-melee5.png"
+      image="units/oldelvish-enchantress-melee5.png"
     [/frame]
   [/attack_anim]
 [/unit_type]
