--- a/units/Sorceress.cfg
+++ b/units/Sorceress.cfg
@@ -1,7 +1,7 @@
 #textdomain wesnoth-The_Memories
 
 [unit_type]
-	id=Elrilindë Elvish Sorceress
+	id=Elrilinde Elvish Sorceress
 	name={S_ELVISH_SORCERESS}
 	race=elf
 	gender=female
@@ -14,7 +14,7 @@
 	experience=100
 	level=2
 	alignment=neutral
-	advances_to=Elrilindë Elvish Enchantress
+	advances_to=Elrilinde Elvish Enchantress
 	cost=34
 	usage=mixed fighter
   {ELVISH_SORCERESS_DESCRIPTION}
@@ -123,7 +123,6 @@
 			image="projectiles/entangle.png"
 			image_diagonal="projectiles/entangle.png"
 		[/missile_frame]
-
 		[frame]
 			begin=-450
 			end=-375
@@ -187,7 +186,6 @@
 			name=faerie fire
 		[/filter_attack]
 		{MISSILE_FRAME_FAERIE_FIRE}
-		
 		[if]
 			hits=yes
 			[frame]
@@ -212,7 +210,6 @@
 				halo_x,halo_y=0,-28
 			[/frame]
 		[/else]
-		
 		[frame]
 			begin=-375
 			end=-300
