--- a/units/Sylph.cfg
+++ b/units/Sylph.cfg
@@ -1,7 +1,7 @@
 #textdomain wesnoth-The_Memories
 
 [unit_type]
-	id=Elrilindë Elvish Sylph
+	id=Elrilinde Elvish Sylph
 	name={S_ELVISH_SYLPH}
 	race=elf
 	gender=female
