--- a/utils/deaths.cfg
+++ b/utils/deaths.cfg
@@ -41,7 +41,7 @@
   [event]
     name=last breath
     [filter]
-      id=Elrilindë
+      id=Elrilinde
     [/filter]
     [message]
       speaker=unit
@@ -59,7 +59,7 @@
   [event]
     name=last breath
     [filter]
-      id=Elrilindë
+      id=Elrilinde
     [/filter]
     [message]
       speaker=unit
@@ -76,7 +76,7 @@
       id=Tendriel
     [/filter]
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"No! I will remember nothing without him."
     [/message]
     {DEFEAT}
@@ -118,7 +118,7 @@
       id=druid
     [/filter]
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"No!"
     [/message]
     {DEFEAT}
@@ -138,7 +138,7 @@
       [/filter_wml]
     [/filter]
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"Farewell $unit.name. I will miss you."
     [/message]
   [/event]
