--- a/scenarios/02_Seeking_the_sylph.cfg
+++ b/scenarios/02_Seeking_the_sylph.cfg
@@ -61,8 +61,8 @@
     user_team_name= _ "Elves"
     shroud=yes
 
-		type=Elrilindë Elvish Sorceress
-		id=Elrilindë
+		type=Elrilinde Elvish Sorceress
+		id=Elrilinde
 		name=_"Elrilindë"
 		canrecruit=yes
     
@@ -116,7 +116,7 @@
     {WILD_WOLF 7 3}
     # starting dialogue
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"Do you have any idea where could the Sylph live, Gioniel?"
     [/message]
     [message]
@@ -124,7 +124,7 @@
       message=_"I am not sure, milady. By the tales she could live in the west but nobody of our people saw her for decades."
     [/message]
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"Ok let us go to the west."
     [/message]
     [message]
@@ -142,7 +142,7 @@
       y=7-14
     [/filter]
     [message]
-			speaker=Elrilindë
+			speaker=Elrilinde
 			message=_"I can feel very strong magic here. It may be the Sylph."
 		[/message]
     [endlevel]
@@ -156,7 +156,7 @@
   [event]
     name=time over
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"We lost too much time."
     [/message]
   [/event]
