--- a/scenarios/04a_The_Leaf.cfg
+++ b/scenarios/04a_The_Leaf.cfg
@@ -19,8 +19,8 @@
     user_team_name= _ "Elves"
     shroud=yes
 
-		type=Elrilindë Elvish Sorceress
-		id=Elrilindë
+		type=Elrilinde Elvish Sorceress
+		id=Elrilinde
 		name=_"Elrilindë"
 		canrecruit=yes
     
@@ -98,7 +98,7 @@
     {WILD_WOLF 3 8}
     # starting dialog
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"Do you have any idea what could be here, Gioniel?"
     [/message]
     [message]
@@ -106,7 +106,7 @@
       message=_"I am sorry, milady. I never visited this part of the forest. Only thing I know is that this is the north edge of the forest. Farther to the north are lands of the man."
     [/message]
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"And what are those humans like?"
     [/message]
     [message]
@@ -114,7 +114,7 @@
       message=_"Not aggressive at least. We have no contact with them."
     [/message]
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"Ok let us look for our plant."
     [/message]
   [/event]
@@ -182,7 +182,7 @@
       message=_"I have found the plant."
     [/message]
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"Very well. Let us take one leaf and go back to the Sylph."
     [/message]
     {VARIABLE_OP items_collected add 1}
@@ -197,7 +197,7 @@
   [event]
     name=time over
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"We lost too much time."
     [/message]
   [/event]
