--- a/scenarios/04c_The_Vase.cfg
+++ b/scenarios/04c_The_Vase.cfg
@@ -19,8 +19,8 @@
     user_team_name= _ "Elves"
     shroud=yes
 
-		type=Elrilindë Elvish Sorceress
-		id=Elrilindë
+		type=Elrilinde Elvish Sorceress
+		id=Elrilinde
 		name=_"Elrilindë"
 		canrecruit=yes
     
@@ -142,7 +142,7 @@
     [/unit]
     # starting dialog
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"Are you really scared of this place? Why is it? What dwells here?"
     [/message]
     [message]
@@ -150,7 +150,7 @@
       message=_"(sighs) Yes, I am. I do not know what exactly dwells here but it is nothing good for sure."
     [/message]
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"Ok let us go and be careful."
     [/message]
     {VARIABLE druid_freed no}
@@ -171,7 +171,7 @@
   [event]
     name=time over
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"We lost too much time."
     [/message]
   [/event]
@@ -212,7 +212,7 @@
       [/variable]
       [then]
         [message]
-          speaker=Elrilindë
+          speaker=Elrilinde
           message=_"Now let us take the vase."
         [/message]
       [/then]
@@ -230,7 +230,7 @@
       [/and]
       [then]
         [message]
-          speaker=Elrilindë
+          speaker=Elrilinde
           message=_"Ok. Let us go back to the Sylph."
         [/message]
         [endlevel]
@@ -254,7 +254,7 @@
       [/and]
       [then]
         [message]
-          speaker=Elrilindë
+          speaker=Elrilinde
           message=_"Ok. Let us go back to the Sylph."
         [/message]
         [message]
@@ -295,7 +295,7 @@
       [/variable]
       [then]
         [message]
-          speaker=Elrilindë
+          speaker=Elrilinde
           message=_"Very well. Now we need to kill these monsters."
         [/message]
       [/then]
@@ -313,7 +313,7 @@
       [/and]
       [then]
         [message]
-          speaker=Elrilindë
+          speaker=Elrilinde
           message=_"Ok. Let us go back to the Sylph."
         [/message]
         [endlevel]
@@ -337,7 +337,7 @@
       [/and]
       [then]
         [message]
-          speaker=Elrilindë
+          speaker=Elrilinde
           message=_"Ok. Let us go back to the Sylph."
         [/message]
         [message]
@@ -395,7 +395,7 @@
       message=_"Thank you very much for saving me. Wait ... Is it you, milady?"
     [/message]
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"Who are you? I cannot recognize you."
     [/message]
     [message]
@@ -407,7 +407,7 @@
       message=_"I am sorry about it."
     [/message]
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"But who are you?"
     [/message]
     [message]
@@ -415,7 +415,7 @@
       message=_"She is Tináclya. She used to be our healer until ... until you expelled her."
     [/message]
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"Why have I done it?"
     [/message]
     [message]
@@ -423,7 +423,7 @@
       message=_"I am not sure, milady but I heard that you had an argument."
     [/message]
     [message]
-      speaker=Elrilindë
+      speaker=Elrilinde
       message=_"Can we get out of it?"
     [/message]
     [message]
